[metadata]
name = turbokouros
version = 0.0.1
author = okohulak
author_email = okohulak@sissa.it
description = "Connector for HPC codes"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.google.com/
project_urls =
    Bug Tracker = https://www.google.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
